refactor: rework export service
APIM-8200